chore: optimize loading state ui

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1492,3 +1492,10 @@
     }
   }
 }
+
+.profile-widget-loading-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
