--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -62,10 +62,18 @@ body {
 }
 
 .web3bio-container {
+  position: relative;
   min-height: 75vh;
   padding: .4rem 0;
   scroll-behavior: smooth;
   width: 100vw;
+
+}
+.wallet-btn{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 10;
 }
 
 .web3bio-mask-cover {
