--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -145,6 +145,7 @@
     }
   }
 
+
   .profile-badges {
     align-items: center;
     color: $gray-color-dark;
@@ -171,7 +172,7 @@
       padding: .25rem;
       text-decoration: none;
       transition: all .2s ease;
-      
+
       &:focus,
       &:hover {
         box-shadow: 0 .05rem .1rem var(--badge-bg-color, rgba($dark-color, .05)), 0 .05rem .8rem rgba($dark-color, .05);
@@ -1271,13 +1272,13 @@
           padding: .2rem .4rem .2rem .4rem;
 
           .rank-label {
-          
-              border-radius: 1rem;
-              font-size: .6rem;
-              font-weight: 700;
-              line-height: .8rem;
-              height: .8rem;
-              text-shadow: rgba($dark-color, .95);
+
+            border-radius: 1rem;
+            font-size: .6rem;
+            font-weight: 700;
+            line-height: .8rem;
+            height: .8rem;
+            text-shadow: rgba($dark-color, .95);
           }
         }
       }
@@ -1491,6 +1492,53 @@
 
     .badge-emoji {
       transform: scale(1.5) rotate(-10deg);
+    }
+  }
+}
+
+.domain-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  color: $gray-color-dark;
+  margin-top: 2rem;
+
+
+  .domain-item {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    background-color: var(--badge-bg-color, rgba($dark-color, .05));
+    border: .05rem solid transparent;
+    border-color: var(--badge-bg-color, transparent);
+    border-radius: .8rem;
+    box-shadow: 0 .05rem .1rem var(--badge-bg-color, rgba($dark-color, .05));
+    text-decoration: none;
+    transition: all .2s ease;
+    padding: .5rem 1rem;
+    box-sizing: border-box;
+
+    &:focus,
+    &:hover {
+      box-shadow: 0 .05rem .1rem var(--badge-bg-color, rgba($dark-color, .05)), 0 .05rem .8rem rgba($dark-color, .05);
+    }
+
+    .domain-icon {
+      margin-right: 1rem;
+    }
+
+    .domain-name {
+      color: rgba($dark-color, .9);
+      font-size: .7rem;
+    }
+
+    .domain-expire-date {
+      position: absolute;
+      font-size: .5rem;
+      right: 1rem;
+      bottom: .5rem;
     }
   }
 }
