--- a/styles/_graph.scss
+++ b/styles/_graph.scss
@@ -34,6 +34,11 @@
       user-select: none;
       word-break: break-all;
     }
+    .btn-close{
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
   }
 
   .web3bio-tooltip {
@@ -93,6 +98,7 @@
 
 
     .svg-canvas {
+      transition: all .5s linear;
       .edge-selected {
         stroke-width: 1.5;
       }
