--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -120,7 +120,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
@@ -169,6 +169,7 @@
     flex-direction: column;
     position: relative;
     transition: all .2s ease-in;
+    order:3;
 
     &:focus,
     &:hover {
@@ -211,12 +212,18 @@
         }
       }
     }
-
-    &.ethereum,
-    &.lens,
-    &.farcaster {
-      order: -1;
+    &.ethereum {
+      order: 0
     }
+
+    &.lens {
+      order: 1
+    }
+
+    &.farcaster {
+      order: 2;
+    }
+    
 
     .social-main {
       align-items: center;
@@ -245,7 +252,7 @@
           border-radius: .5rem;
           object-fit: cover;
 
-          & + .icon {
+          &+.icon {
             bottom: -.6rem;
             position: absolute;
             right: -.6rem;
@@ -407,7 +414,7 @@
   }
 }
 
-.backtotop { 
+.backtotop {
   backface-visibility: hidden;
   pointer-events: none;
   position: absolute;
@@ -420,10 +427,8 @@
     pointer-events: all;
     position: sticky;
     top: 1rem;
-    z-index: 999; 
+    z-index: 999;
   }
-  
-  @media screen and (min-width: $size-sm) {
-    
-  }
+
+  @media screen and (min-width: $size-sm) {}
 }
