--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1465,8 +1465,8 @@
 // Profile Card
 .profile-card {
   background: $light-color;
-  border-radius: .4rem;
-  box-shadow: 0 .2rem .6rem rgba($dark-color, .2);
+  border-radius: .8rem;
+  box-shadow: 0 .4rem 1.6rem rgba($dark-color, .25);
   display: flex;
   flex-direction: column;
   max-width: 16rem;
@@ -1509,12 +1509,12 @@
     color: $gray-color;
     display: flex;
     font-size: .65rem;
+    gap: .25rem;
   }
 
   .profile-card-address {
     align-items: center;
     display: flex;
-    margin-left: .25rem;
 
     &:focus,
     &:hover {
