--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -105,14 +105,35 @@ body {
     align-items: center;
     gap: .75rem;
 
-    .chainIcon {
-      width: auto;
+    .chain-container {
+      display: flex;
+      align-items: center;
+      gap: .5rem;
+      padding: .25rem .5rem;
+      font-size: .7rem;
+      background: $light-color;
+      color: $dark-color;
+      box-shadow: 0 0.1rem 1.2rem hsla(0, 0%, 7%, .01);
+      line-height: 1.25rem;
+
+      .chain-icon {
+        width: 1.25rem;
+        height: 1.25rem;
+        object-fit: contain;
+        cursor: pointer;
+        border-radius: 99%;
+      }
     }
+
 
     .dropdown {
       .menu {
         left: unset;
-        right: 0
+        right: 0;
+
+        .menu-item {
+          white-space: nowrap;
+        }
       }
     }
   }
