--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -169,7 +169,7 @@
       padding: .25rem;
       text-decoration: none;
       transition: all .2s ease;
-      
+
       &:focus,
       &:hover {
         box-shadow: 0 .05rem .1rem var(--badge-bg-color, rgba($dark-color, .05)), 0 .05rem .8rem rgba($dark-color, .05);
@@ -361,7 +361,7 @@
         filter: grayscale(1);
         opacity: .1;
       }
-    
+
       &.nft {
         .profile-widget-body {
           align-items: center;
@@ -1330,13 +1330,13 @@
           padding: .2rem .4rem .2rem .4rem;
 
           .rank-label {
-          
-              border-radius: 1rem;
-              font-size: .6rem;
-              font-weight: 700;
-              line-height: .8rem;
-              height: .8rem;
-              text-shadow: rgba($dark-color, .95);
+
+            border-radius: 1rem;
+            font-size: .6rem;
+            font-weight: 700;
+            line-height: .8rem;
+            height: .8rem;
+            text-shadow: rgba($dark-color, .95);
           }
         }
       }
@@ -1544,13 +1544,21 @@
   align-items: center;
   border-radius: .6rem;
   display: flex;
+  gap: .65rem;
   opacity: .95;
   padding: .5rem;
   transition: opacity .25s ease-in-out;
+  z-index: 10;
 
   @media screen and (min-width: $size-lg) {
     bottom: .5rem;
     position: fixed;
+  }
+
+  .btn-search {
+    width: 1.8rem;
+    padding: 0;
+    height: 1.8rem;
   }
 
   .btn {
