--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -401,6 +401,13 @@
       }
     }
   }
+  .content-expired{
+    position: absolute;
+    font-size: .5rem;
+    right: 1rem;
+    bottom: .15rem;
+    color: rgba($gray-color, .9);
+  }
 
   .title {
     font-size: .7rem;
