--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -34,7 +34,7 @@
 @import "spectre/utilities";
 
 // Components
-@import "graph";
+@import "modal";
 @import "profile";
 @import "search";
 @import "feed";
@@ -145,156 +145,6 @@ body {
   }
 }
 
-.web3bio-mask-cover {
-  align-items: center;
-  display: flex;
-  position: fixed;
-  justify-content: center;
-  left: 0;
-  top: 0;
-  background: rgba($dark-color, .5);
-  right: 0;
-  bottom: 0;
-  z-index: 100;
-  backdrop-filter: blur(.2rem);
-
-  .web3bio-modal-container {
-    position: relative;
-    border-radius: 1rem;
-    height: 100%;
-    max-height: 100vh;
-    max-width: $size-xl;
-    overflow-y: auto;
-    overscroll-behavior: contain;
-    padding: 2rem;
-    scroll-behavior: smooth;
-    width: 100%;
-
-    @media screen and (max-width: $size-sm) {
-      @supports (height: 100dvh) {
-        height: 100dvh;
-      }
-    }
-
-    @media screen and (max-width: $size-sm) {
-      padding: .5rem;
-    }
-
-    .web3-profile-base {
-      top: 0;
-    }
-
-    &.modal-share-container {
-      height: auto;
-      max-height: calc(100vh - 4rem);
-      max-width: 28rem;
-      padding: 2rem;
-      width: 95%;
-
-      @media screen and (max-width: $size-sm) {
-        padding: 1.5rem;
-      }
-    }
-
-    &.modal-search-container {
-      padding-top: 15vh;
-
-      .web3bio-search {
-        margin: auto;
-        max-width: 30rem;
-
-        .form-input-group {
-          animation: bounce-in .2s cubic-bezier(.5, .25, .5, 1) 1;
-        }
-      }
-    }
-
-    .modal-article-container {
-      width: 100%;
-      height: 100%;
-      background: #fff;
-      max-width: $size-md;
-      margin: auto;
-      padding: 2rem 4rem;
-      box-sizing: border-box;
-      overflow-y: auto;
-
-      border-radius: .5rem;
-
-      @media screen and (max-width: $size-sm) {
-        padding: 1rem;
-      }
-
-      .modal-article-title {
-        font-size: 1.2rem;
-      }
-
-      img {
-        height: auto;
-        max-width: 100%;
-      }
-
-      h1 {
-        font-size: 1.2rem;
-        font-weight: 700;
-      }
-
-      h2 {
-        font-size: 1rem;
-        font-weight: 700;
-      }
-
-      h3 {
-        font-size: .8rem;
-        font-weight: 700;
-      }
-    }
-
-    .modal-preview-container {
-      position: relative;
-
-      .btn {
-        width: unset;
-        height: unset;
-        padding: .2rem
-      }
-
-      .external-icon {
-        opacity: 0;
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-        transition: opacity .2s ease;
-
-        &:hover {
-          opacity: 1;
-        }
-      }
-
-      .preview-image {
-
-        .img-responsive,
-        .video-responsive {
-          max-height: 90vh;
-          max-width: 90vw;
-        }
-
-        &:hover {
-          & .external-icon {
-            opacity: 1;
-          }
-        }
-      }
-    }
-
-    .modal-close-icon {
-      position: fixed;
-      right: 1rem;
-      top: 1rem;
-      z-index: 999;
-    }
-  }
-}
 
 //- Web3.bio Cover
 .web3bio-cover {
