--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -310,7 +310,7 @@ body {
     flex-direction: column;
     height: 100%;
     overflow: hidden;
-    padding: 2rem 1rem;
+    padding: 2rem;
     width: 100%;
   
     .feature-header {
