--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -28,6 +28,7 @@
 @import "spectre/pagination";
 @import "spectre/toasts";
 @import "spectre/tooltips";
+@import "spectre/tabs";
 
 // Utility classes
 @import "spectre/animations";
