--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -236,12 +236,31 @@
         padding: 2rem 4rem;
         box-sizing: border-box;
         overflow-y: auto;
-  
         border-radius: .5rem;
+        position: relative;
+
+        .external-icon {
+          opacity: 0;
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+          transition: opacity .2s ease;
+  
+          &:hover {
+            opacity: 1;
+          }
+        }
+
+        &:hover {
+          & .external-icon {
+            opacity: 1;
+          }
+        }
   
         @media screen and (max-width: $size-sm) {
           padding: 1rem;
         }
+        
   
         .modal-article-title {
           font-size: 1.2rem;
