chore: sns migration

--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -145,7 +145,8 @@
           height: 20px
         }
   
-        .ens-icon {
+        .badge-icon {
+          fill: none;
           pointer-events: none;
           cursor: pointer;
           width: 18px;
