--- a/styles/spectre/_tables.scss
+++ b/styles/spectre/_tables.scss
@@ -44,10 +44,19 @@
 
   td,
   th {
-    border-bottom: $border-width solid $border-color;
+    border-bottom: $border-width-sm solid $border-color;
     padding: $unit-3 $unit-2;
   }
+
   th {
     border-bottom-width: $border-width-lg;
+  }
+
+  tr {
+    &:last-child {
+      td {
+        border-bottom-width: 0;
+      }
+    }
   }
 }
