--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1070,6 +1070,10 @@
             border-radius: 1rem;
           }
         }
+
+        .feed-token {
+          max-width: 10rem;
+        }
       }
     }
   }
