--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1038,7 +1038,7 @@
       }
 
       th {
-        padding: .2rem .4rem;
+        padding: .4rem;
         text-align: left;
       }
 
@@ -1047,7 +1047,10 @@
         font-weight: 400;
         line-height: 1rem;
         text-align: left;
-        width: 33.3333%;
+        
+        &:first-child {
+          width: 50%;
+        }
       }
 
       .table-item {
@@ -1057,13 +1060,14 @@
         height: 1.2rem;
 
         .dao-icon {
-          width: 1rem;
-          height: 1rem;
+          border-radius: 50%;
+          height: 1.2rem;
+          width: 1.2rem;
   
           .img-placeholder {
+            border-radius: 50%;
             height: 100%;
             width: 100%;
-            border-radius: 50%;
           }
   
           img {
