--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -288,6 +288,37 @@ body {
   }
 }
 
+// -Web3.bio Widgets Control
+.widgets-control {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  right: 1rem;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: .25rem;
+  background: $light-color;
+  padding: .5rem .25rem;
+  border-radius: 1rem;
+  height: fit-content;
+  transition: all .3s ease;
+  box-shadow: 0 .1rem .4rem 0.05rem rgba($dark-color, .25), 0 .1rem .2rem rgba($dark-color, .05);
+
+  .widget-control-item {
+    font-size: 1rem;
+    text-align: center;
+    text-decoration: none;
+    transition: all .2s ease;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.15);
+    }
+  }
+}
+
 .web3bio-placeholder {
   background: rgba(darken($primary-color, 10%), .01);
   box-shadow: inset 0 0 4rem rgba($dark-color, .2);
@@ -313,16 +344,16 @@ body {
     overflow: hidden;
     padding: 2rem;
     width: 100%;
-  
+
     .feature-header {
       position: relative;
       z-index: 1;
-  
+
       h3 {
         font-size: 1rem;
         font-weight: 700;
       }
-  
+
       h4 {
         color: lighten($dark-color, 25%);
         font-size: .65rem;
@@ -330,7 +361,7 @@ body {
         margin: 1rem 0;
       }
     }
-  
+
     .feature-body {
       &.feature-body-profile {
         .demo-profile {
@@ -342,41 +373,41 @@ body {
           display: inline-flex;
           margin: .1rem;
           padding: .25rem;
-  
+
           .avatar {
             align-items: center;
             background: rgba($dark-color, .05);
             display: flex;
             font-size: 2rem;
             justify-content: center;
-  
+
             &.avatar-1 {}
-  
+
             &.avatar-2 {
               background: rgba(#F78E4E, .25);
             }
-  
+
             &.avatar-3 {
               background: rgba(#836F6F, .25);
             }
-  
+
             &.avatar-4 {
               background: rgba(#D2CFD1, .25);
             }
-  
+
             &.avatar-5 {
               background: rgba(#4AADCB, .25);
             }
-  
+
             &.avatar-6 {
               background: rgba(#F0415E, .25);
             }
-  
+
             &.avatar-7 {
               background: rgba(#93989B, .25);
             }
           }
-  
+
           .name {
             font-size: .8rem;
             font-weight: 700;
@@ -384,7 +415,7 @@ body {
           }
         }
       }
-  
+
       &.feature-body-graph {
         align-items: center;
         display: flex;
@@ -392,41 +423,41 @@ body {
         flex-direction: column;
         justify-content: center;
         position: relative;
-  
+
         .btn {
           position: relative;
           z-index: 99;
         }
-  
+
         .circle {
           background: rgba($dark-color, .04);
           border-radius: 50%;
           content: "";
           display: block;
           position: absolute;
-  
+
           &:first-child {
             height: 4rem;
             width: 4rem;
           }
-  
+
           &:nth-child(2) {
             height: 8rem;
             width: 8rem;
           }
-  
+
           &:nth-child(3) {
             height: 13rem;
             width: 13rem;
           }
-  
+
           &:nth-child(4) {
             height: 19rem;
             width: 19rem;
           }
         }
       }
-  
+
       .identity {
         border-radius: .6rem;
         box-shadow: inset 0 0 .05rem rgba($dark-color, .25);
@@ -434,23 +465,23 @@ body {
         display: inline-flex;
         margin: .1rem;
         padding: .4rem;
-  
+
         &.identity-ens {
           background: rgba(#5298FF, .1);
         }
-  
+
         &.identity-spaceid {
           background: rgba(#71EBAA, .2);
         }
-  
+
         &.identity-farcaster {
           background: rgba(#8465CB, .1);
         }
-  
+
         &.identity-unstoppabledomains {
           background: rgba(#2E65F5, .05);
         }
-  
+
         &.identity-lens {
           background: lighten(#6bc674, 35%);
         }
