--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -203,6 +203,8 @@
       }
   
       &.modal-share-container {
+        display: flex;
+        flex-direction: column;
         height: auto;
         max-height: calc(100vh - 4rem);
         max-width: 28rem;
@@ -211,6 +213,83 @@
   
         @media screen and (max-width: $size-sm) {
           padding: 1.5rem;
+        }
+
+        .profile-share-header {
+          align-items: center;
+          display: flex;
+          justify-content: space-between;
+          padding-bottom: 1.5rem;
+
+          .btn-close {
+            position: absolute;
+            right: 1rem;
+          }
+        }
+      
+        .profile-share-body {
+          flex: 1;
+          gap: .2rem;
+          padding: 0;
+        }
+
+        .profile-share-actions {
+          align-items: center;
+          display: flex;
+          gap: .5rem;
+          margin-top: 1rem;
+
+          .btn-group {
+            flex: 1;
+          }
+
+          @media screen and (max-width: $size-sm) {
+            flex-direction: column;
+          }
+        }
+      
+        .profile-share-footer {
+          padding-top: 1rem;
+      
+          .input-group-btn {
+            position: relative;
+          }
+      
+          .tooltip-copy {
+            position: absolute;
+          }
+        }
+      
+        .btn-group {
+          flex-wrap: wrap;
+      
+          .btn {
+            gap: .2rem;
+          }
+        }
+      
+        .profile-share-card {
+          background: $bg-color;
+          border-radius: .5rem;
+          box-shadow: 0 -.05rem 2rem rgba($dark-color, .15), inset 0 -.05rem .1rem rgba($dark-color, .025);
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+          min-height: 10rem;
+          position: relative;
+          width: 100%;
+          
+          @media screen and (max-width: $size-md) {
+            min-height: 8rem;
+          }
+          
+          .img-responsive {
+            border-radius: .5rem;
+            height: 12rem;
+            margin: 0 auto;
+            transition: filter 0.3s ease-out;
+            width: auto;
+          }
         }
       }
   
