--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -265,7 +265,7 @@
     }
 
     @media screen and (min-width: $size-md) and (max-width: $size-lg) {
-      width: 50%;
+      width: 25%;
     }
 
     @media screen and (max-width: $size-sm) {
@@ -341,10 +341,6 @@
     .widget-action {
       display: flex;
       flex-wrap: nowrap;
-      position: absolute;
-      right: 1rem;
-      top: 1rem;
-      cursor: pointer;
     }
 
     .action-icon {
@@ -484,7 +480,9 @@
     .profile-widget-header {
       align-items: center;
       display: flex;
-      height: 1.5rem;
+      flex-wrap: wrap;
+      gap: .5rem;
+      justify-content: space-between;
     }
 
     .profile-widget-footer {
@@ -503,6 +501,7 @@
       display: flex;
       font-size: .75rem;
       font-weight: 500;
+      line-height: 1.5rem;
       margin-bottom: 0;
       text-decoration: none;
     }
@@ -1051,10 +1050,10 @@
         font-weight: 400;
         line-height: 1rem;
         text-align: left;
-        width: 25%;
+        width: 30%;
         
         &:first-child {
-          width: 50%;
+          width: 40%;
         }
       }
 
