--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -287,17 +287,17 @@ body {
   }
 }
 
-// Web3.bio Widgets Control
-.widgets-control {
+// Web3.bio Widgets Indicator
+.widgets-indicator {
   align-items: center;
-  background: rgba($bg-color, .5);
+  background: rgba($bg-color, .05);
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
   font-size: 1rem;
-  gap: .25rem;
+  gap: .4rem;
   height: fit-content;
-  padding: .4rem;
+  padding: .6rem .4rem;
   position: fixed;
   right: 1rem;
   top: 50%;
@@ -307,13 +307,40 @@ body {
   z-index: 10;
 
   &:hover {
-    background: rgba($bg-color, 1);
+    background: rgba($bg-color, .85);
+    
+    .widget-indicator-item {
+      color: initial;
+
+      .indicator-dot {
+        display: none;
+      }
+    }
   }
 
-  .widget-control-item {
+  .widget-indicator-item {
+    align-items: center;
+    border-radius: 50%;
+    color: transparent;
+    cursor: pointer;
+    display: flex;
+    height: 1.2rem;
+    justify-content: center;
+    position: relative;
     text-align: center;
     text-decoration: none;
-    cursor: pointer;
+    width: 1.2rem;
+
+    .indicator-dot {
+      background: $bg-color;
+      border-radius: .2rem;
+      display: block;
+      height: .4rem;
+      left: .4rem;
+      position: absolute;
+      top: .4rem;
+      width: .4rem;
+    }
   }
 }
 
