Update icon and render

--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -312,7 +312,7 @@
     padding: 0 .8rem .4rem .8rem;
   }
 
-  .label-ens {
+  .label-domain {
     align-items: center;
     border-radius: .3rem;
     color: lighten($dark-color, 25%);
