Add new Verified Social Link

--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -416,7 +416,7 @@
   top: 12rem;
   right: .5rem;
 
-  .action-btn {
+  .btn-action {
     background: rgba($dark-color, .1);
     bottom: .5rem;
     pointer-events: all;
