--- a/styles/spectre/_buttons.scss
+++ b/styles/spectre/_buttons.scss
@@ -137,8 +137,8 @@
   }
 
   // Button Action
-  &.action-btn {
-    padding: .2rem;
+  &.btn-action {
+    padding: 0;
     width: $control-size;
 
     &.btn-sm {
