--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -413,13 +413,7 @@
       cursor: pointer;
       overflow: hidden;
       position: relative;
-      .verified-icon{
-        position: absolute;
-        right: 1rem;
-        bottom: 1rem;
-        font-size: 0.8;
-      }
-
+      
       &:focus,
       &:hover {
         box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .15), 0 .1rem .2rem rgba($dark-color, .01);
@@ -435,6 +429,20 @@
       }
     }
 
+    &.website {
+      .platform-icon {
+        background: $light-color;
+        box-shadow: inset 0 0 0 .05rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .05), 1rem 0 6rem 3rem var(--widget-bg-color);
+
+        img {
+          border-radius: .3rem;
+          height: 1.2rem;
+          position: absolute;
+          width: 1.2rem;
+        }
+      }
+    }
+
     .platform-icon {
       align-items: center;
       background: var(--widget-primary-color, $light-color);
@@ -445,19 +453,22 @@
       flex: 0 0 1.8rem;
       height: 1.8rem;
       justify-content: center;
+      position: relative;
       transition: all .25s ease-in-out;
       width: 1.8rem;
 
-      &.website {
-        background: $light-color;
-        box-shadow: inset 0 0 0 .05rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .05), 1rem 0 6rem 3rem var(--widget-bg-color);
-
-        img {
-          border-radius: .3rem;
-          height: 1.2rem;
-          position: absolute;
-          width: 1.2rem;
-        }
+      .icon-verified {
+        animation: bounce-in 1s ease-in-out 1;
+        backdrop-filter: blur(.2rem);
+        border-radius: 50%;
+        bottom: -.4rem;
+        filter: drop-shadow(0 .2rem .2rem rgba($dark-color, .2));
+        height: 1.2rem;
+        opacity: .9;
+        padding: .1rem;
+        position: absolute;
+        right: -.4rem;
+        width: 1.2rem;
       }
     }
 
@@ -474,6 +485,7 @@
 
     .platform-action {
       opacity: 0;
+      padding: .1rem;
       position: absolute;
       right: .5rem;
       top: .5rem;
