Update widget indicator

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -341,6 +341,10 @@
     .widget-action {
       display: flex;
       flex-wrap: nowrap;
+
+      .form-select {
+        width: 5rem;
+      }
     }
 
     .action-icon {
