--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -226,6 +226,7 @@
           .btn-close {
             position: absolute;
             right: 1rem;
+            top: 1rem;
           }
         }
       
