Update date and others

--- a/styles/spectre/_avatars.scss
+++ b/styles/spectre/_avatars.scss
@@ -9,6 +9,7 @@
   font-weight: 300;
   line-height: 1.25;
   margin: 0;
+  object-fit: cover;
   position: relative;
   text-transform: uppercase;
   vertical-align: middle;
