--- a/styles/spectre/_forms.scss
+++ b/styles/spectre/_forms.scss
@@ -117,7 +117,7 @@ textarea.form-input {
 .form-select {
   appearance: none;
   border: $border-width solid transparent;
-  background-color: rgba($gray-color, .25);
+  background-color: rgba($gray-color-light, .5);
   border-radius: $border-radius;
   color: inherit;
   font-size: $font-size;
@@ -160,7 +160,7 @@ textarea.form-input {
     }
   }
   &:not([multiple]):not([size]) {
-    background: $bg-color url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%204%205'%3E%3Cpath%20fill='%23667189'%20d='M2%200L0%202h4zm0%205L0%203h4z'/%3E%3C/svg%3E") no-repeat right .35rem center / .4rem .5rem;
+    background: rgba($gray-color-light, .5) url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%204%205'%3E%3Cpath%20fill='%23667189'%20d='M2%200L0%202h4zm0%205L0%203h4z'/%3E%3C/svg%3E") no-repeat right .35rem center / .4rem .5rem;
     padding-right: $control-icon-size + $control-padding-x;
   }
 }
