--- a/styles/spectre/_menus.scss
+++ b/styles/spectre/_menus.scss
@@ -54,6 +54,11 @@
       padding: $unit-2 $unit-2;
     }
 
+    .icon {
+      height: 1rem;
+      width: 1rem;
+    }
+
     .form-checkbox,
     .form-radio,
     .form-switch {
