--- a/styles/spectre/_menus.scss
+++ b/styles/spectre/_menus.scss
@@ -29,7 +29,7 @@
       color: inherit;
       display: flex;
       margin: 0 (-$unit-4);
-      padding: $unit-2 $unit-2;
+      padding: $unit-2;
       text-decoration: none;
 
       &:focus,
@@ -51,7 +51,7 @@
       color: inherit;
       display: flex;
       margin: 0 (-$unit-4);
-      padding: $unit-2 $unit-2;
+      padding: $unit-2;
     }
 
     .icon {
